[package]
name = "broma-rs"
description = "Broma language parser implementation in Rust (based on Geode fork)"
license = "Unlicense"
repository = "https://github.com/zeozeozeo/geode-rs"
version = "0.1.0"
edition = "2024"
exclude = ["testdata/"]

[dependencies]
bitflags = "2.11.0"
pest = "2.8.6"
pest_derive = "2.8.6"
thiserror = "2.0"
