[package]
name = "geode-codegen"
description = "Geode codegen based on Broma bindings (for geode-rs)"
license = "Unlicense"
repository = "https://github.com/zeozeozeo/geode-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
broma-rs = { version = "0.1.0", path = "../broma-rs" }
cfg-if = "1.0.4"
lazy_static = "1.5.0"
proc-macro2 = { version = "1.0", default-features = false }
quote = "1.0"
