[package]
name = "geode-egui"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.34.3"
egui_glow = { version = "0.34.3", default-features = false }
geode-rs = { path = "../geode-rs" }
log = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = ["Win32_Foundation", "Win32_System_LibraryLoader"] }
