[package]
name = "geode-example"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
egui_demo_lib = "0.33"
egui_extras = "0.33"
geode-egui = { path = "../geode-egui" }
geode-rs = { path = "../geode-rs" }
log = "0.4"
simple_logger = "5.2.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"
