[package]
name = "geode-rs"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = ["bindgen"]
bindgen = ["dep:bindgen"]

[dependencies]
geode-macros = { path = "../geode-macros" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = ["Win32_Foundation", "Win32_System_LibraryLoader"] }

[build-dependencies]
geode-codegen = { path = "../geode-codegen" }
glob = "0.3"
anyhow = "1.0"
bindgen = { version = "0.72", optional = true }
regex = "1.12"
