[package]
name = "geode-rs"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = ["bindgen"]
bindgen = ["dep:bindgen"]

[dependencies]
ctor = { version = "0.6.3", default-features = false, features = ["proc_macro", "__no_warn_on_missing_unsafe"] }
geode-macros = { path = "../geode-macros" }
stl-core = { path = "../stl-core" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = ["Win32_Foundation", "Win32_System_LibraryLoader"] }

[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2"

[build-dependencies]
geode-codegen = { path = "../geode-codegen" }
glob = "0.3"
anyhow = "1.0"
bindgen = { version = "0.72", optional = true }
regex = "1.12"
